--- a/footer.css
+++ b/footer.css
@@ -24,7 +24,7 @@ ul{
 }
     
     .footer{
-    background-color:#1a001a;
+    background-color:#000000;
     padding: 70px 0;
 
 }
@@ -33,14 +33,23 @@ ul{
     padding: 0 15px;
 }
 .footer-col h4{
-    font-size: 18px;
+    font-size: 25px;
     color: #ffffff;
     text-transform:capitalize ;
     margin-bottom: 30px;
     font-weight: 500;
     position: relative;
+    border-radius: 20px;
     
     
+}
+.content_button{
+    padding: 1%;
+    border-radius: 8px;
+    font-size: 30px;
+    font-weight: 200;
+    color: #ffffff;
+    background-color: rgb(211,4,152);
 }
 .footer-col h4::before{
     content: '';
@@ -75,12 +84,12 @@ width: 50px;
     display: inline-block;
     height: 40px;
     width: 40px;
-    background-color: rgba(204,0,135);
+    
     margin :  0 10px 10px 0;
     text-align: center;
     line-height: 40px;
     border-radius: 50%;
-    color: #ffffff;
+    color: #e91e63;
     transition: all 0.5s ease;
 
 
@@ -92,14 +101,17 @@ width: 50px;
     background-color: #ffffff;
 
 }
-.container mt-4{
-    font-size: 18px;
+
+.copyright{
     color: #ffffff;
-    text-transform: capitalize;
-    margin-bottom: 30px;
-    font-weight: 500;
-    position:left;
+    display: flex;
+    font-weight:20px ;
 }
+
+
+
+
+
 
 
 
