--- a/contactus.css
+++ b/contactus.css
@@ -1,90 +1,82 @@
-*{
+body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    background-color: black;
-    color: white;
+    background: rgb(157,42,189);
+    background: linear-gradient(90deg,rgba(157,42,189,1)0%,rgba(242,42,191,1)51%,rgba(239,0,242,1)100%);
+    color: #fff;
     font-family: 'Josefin Sans', sans-serif;
 }
-
-.header{
-    width: 100vw;
-    height: 18vh;
-    /* border: 2px solid white; */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
+navbar{
+    background-color: black;
 }
 
-.headerfirsthalf{
-    display: flex;
-    width: 50vw;
-    height: 17vh;
-    /* border: 2px solid white; */
-
-    justify-content: flex-start;
-    align-items: center;
-    text-align: center;
-
-
+.logo{
+    height: 50px;
+    width: 50px;
 }
-.companylogo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: fit-content;
-    height: fit-content;
-    /* border: 2px solid white; */
-
-}
-#logo{
-    height: 105.74px;
-    width: 117px;
-}
-.companyname{
-    font-weight: 700;
-    font-size: 36px;
-    /* border: 2px solid white; */
-}
-.headersecondhalf{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    text-align: center;
-    flex-direction: row;
-    width: 50vw;
-    height: 17vh;
-    /* border: 2px solid white; */
-}
-.btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 158px;
-    height: 69px;
-    background-color: #310011;
-    border: 1px solid #C6246E;
-    color: #C6246E;
+.navbar-brand{
+    position: absolute;
+    left: 5%;
+    color: #fff;
     font-weight: 500;
-    font-size: 36px;
-    margin: 10px;
-    border-radius: 8px;
 }
 
- /* here the Upper body start  */
+.form-inline{
+    position: absolute;
+    right: 5%;
+}
+.header{
+    padding: 5%;
+}
 
-.upperbody{
-    display: flex;
-    width: 100vw;
-    height: 431px;
-    /* border: 2px solid white; */
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+.header_heading {
+    font-size: 40px;
     font-weight: 700;
-    font-size: 70px;
-    color: white;
-    background-image: linear-gradient(to right bottom,#C6246E,purple);
+}
+
+.header_body {
+    margin: 2.5% 5%;
+}
+.about{
+    padding: 7%;
+}
+
+.about_heading{
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.about_button{
+    position: absolute;
+    border-radius: 61px;
+    background-color:#310011;
+    color: #fff;
+    height: 40px;
+    width: 120px;
+    margin: 2%;
+    right: 15%;
+
+}
+.cards {
+    background-color: black;
+    padding: 3%;
+}
+
+.card {
+    margin: 2% 1%;
+    background: rgb(126, 10, 61);
+    background: linear-gradient(90deg, rgba(126, 10, 61, 1) 0%, rgba(242, 42, 147, 1) 51%, rgba(184, 0, 97, 1) 100%);
+    height: 30vh;
+}
+
+.card-text{
+    margin: 4% 0%;
+}
+
+.btn{
+    color: #fff;
+}
+
+.cards_greetings {
+    margin: 5% 5%;
 }
